# rust-ddd-example

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2024-07-23-124633_create_user/: up.sql
src/: main.rs  schema.rs
src/application/: mod.rs
src/application/use_cases/: get_user.rs  mod.rs  register_user.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: user_service.rs
src/infrastructure/: mod.rs  web.rs
src/infrastructure/db/: connection.rs
src/infrastructure/repositories/: mod.rs  postgres_user_repositorv.rs
src/presentation/: mod.rs
src/presentation/handlers/: mod.rs  user_handler.rs
src/presentation/routers/: user_routes.rs
